--- a/week-01-html/index.html
+++ b/week-01-html/index.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Hello World</title>
+    <title>Sam Grubel's webpage</title>
   </head>
   <body>
-    <h1>Hello World</h1>
-    <p>Welcome to my webpage!</p>
+    <h1>hey everyone my name is Sam! I am a junior majoring in Multidisciplinary Eduational studies</h1>
+    <p>Follow me on instagram <link> https://www.instagram.com/samanthacgrubel/ <link> </p>
+    <p> and follow My bunny's insta <link> https://www.instagram.com/daisythebunno/ <link> </p>
   </body>
+  <h2> Here are some of my favorite books and TV shows </h2>
+    <p> - The Arianne Trilogy (book)</p>
+    <p> - Paranormals of Avynwood (book) </p>
+    <p> - Greys Anatomy (show) </p>
+
+  <h1> "i knew when i met you an adventure was going to happen" - Whinnie The Pooh </h1>
+    <body>
 </html>
