--- a/week-01-html/index.html
+++ b/week-01-html/index.html
@@ -5,14 +5,14 @@
   </head>
   <body>
     <h1>hey everyone my name is Sam! I am a junior majoring in Multidisciplinary Eduational studies</h1>
-    <p>Follow me on instagram <link> https://www.instagram.com/samanthacgrubel/ <link> </p>
-    <p> and follow My bunny's insta <link> https://www.instagram.com/daisythebunno/ <link> </p>
-  </body>
+    <p>Follow me on instagram <a href="https://www.instagram.com/samanthacgrubel/"> Here </a> </p>
+    <p> and follow My bunny's insta <a href= "https://www.instagram.com/daisythebunno/"> Here </a> </p>
   <h2> Here are some of my favorite books and TV shows </h2>
     <p> - The Arianne Trilogy (book)</p>
     <p> - Paranormals of Avynwood (book) </p>
     <p> - Greys Anatomy (show) </p>
-
+<img src="Daisy.jpg" />
+<img src="Sam Picture 2.jpg" />
   <h1> "i knew when i met you an adventure was going to happen" - Whinnie The Pooh </h1>
-    <body>
+</body>
 </html>
