--- a/week-01-html/index.html
+++ b/week-01-html/index.html
@@ -11,8 +11,8 @@
     <p> - The Arianne Trilogy (book)</p>
     <p> - Paranormals of Avynwood (book) </p>
     <p> - Greys Anatomy (show) </p>
-<img src="Daisy.jpg" />
-<img src="Sam Picture 2.jpg" />
+<img src="Daisy.jpg">
+<img src="Sam Picture 2.jpg">
   <h1> "i knew when i met you an adventure was going to happen" - Whinnie The Pooh </h1>
 </body>
 </html>
