--- a/week-02-css/index.html
+++ b/week-02-css/index.html
@@ -2,6 +2,10 @@
 <html>
   <head>
     <title>Styled Text</title>
+    <style>
+    p {
+      background-color: aqua; 
+    }
     <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body>
