--- a/week-02-css/index.html
+++ b/week-02-css/index.html
@@ -6,6 +6,7 @@
     p {
       background-color: aqua;
     }
+    <style>
     <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body>
