--- a/week-02-css/index.html
+++ b/week-02-css/index.html
@@ -3,14 +3,24 @@
   <head>
     <title>Styled Text</title>
     <style>
-    p {
-      background-color: aqua;
+    body {
+      background-color: sky blue;
     }
-    <style>
+    p {
+      color:#00ffff;
+     border:thick solid purple
+     text align: right;
+ }
+ h1 {
+   color: #CD5C5C;
+        border: thin solid red;
+	      text-align: right;
+ }
+ </style>
     <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body>
-    <p><span class="big">Space</span>: the final frontier.</p>
+    <p class "bold"><span>Space</span>: the final frontier.</p>
     <p>
       These are the voyages of the starship <span class="big">Enterprise</span>.
      </p>
@@ -19,6 +29,6 @@
       worlds.
     </p>
     <p>To seek out <span class="big">new life</span>, and new civilizations.</p>
-    <p><span id="boldly">To boldly go</span> where no one has gone before!</p>
+    <p class= "dark"><span id="boldly">To boldly go</span> where no one has gone before!</p>
   </body>
 </html>
