--- a/week-02-css/index.html
+++ b/week-02-css/index.html
@@ -4,12 +4,12 @@
     <title>Styled Text</title>
     <style>
     body {
-      background-color: sky blue;
+      background-color: skyblue;
     }
     p {
       color:#00ffff;
-     border:thick solid purple
-     text align: right;
+     border:thick solid purple;
+     text-align: right;
  }
  h1 {
    color: #CD5C5C;
@@ -20,7 +20,7 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body>
-    <p class "bold"><span>Space</span>: the final frontier.</p>
+    <p "bold"><span>Space</span>: the final frontier.</p>
     <p>
       These are the voyages of the starship <span class="big">Enterprise</span>.
      </p>
