--- a/week-02-css/index.html
+++ b/week-02-css/index.html
@@ -4,7 +4,7 @@
     <title>Styled Text</title>
     <style>
     body {
-      background-color: skyblue;
+      background-color: white;
     }
     p {
       color:#00ffff;
