--- a/week-02-css/index.html
+++ b/week-02-css/index.html
@@ -4,7 +4,7 @@
     <title>Styled Text</title>
     <style>
     body {
-      background-color: white;
+      background-color: White;
     }
     p {
       color:#00ffff;
@@ -25,8 +25,7 @@
       These are the voyages of the starship <span class="big">Enterprise</span>.
      </p>
     <p>
-      Its continuing mission: to explore <span class="big">strange</span> new
-      worlds.
+      I HATE CSS
     </p>
     <p>To seek out <span class="big">new life</span>, and new civilizations.</p>
     <p class= "dark"><span id="boldly">To boldly go</span> where no one has gone before!</p>
