--- a/week-02-css/index.html
+++ b/week-02-css/index.html
@@ -7,7 +7,7 @@
       background-color: White;
     }
     p {
-      color:#00ffff;
+      color:#4B0082;
      border:thick solid purple;
      text-align: right;
  }
