--- a/week-02-css/index.html
+++ b/week-02-css/index.html
@@ -28,6 +28,6 @@
       I HATE CSS
     </p>
     <p>To seek out <span class="big">new life</span>, and new civilizations.</p>
-    <p class= "dark"><span id="boldly">To boldly go</span> where no one has gone before!</p>
+    <p class= "dark"><span id="boldly">Be a Froot Loop</span> In a World of Cheerios</p>
   </body>
 </html>
