--- a/week-02-css/index.html
+++ b/week-02-css/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Styled Text</title>
+    <title>Cascading CSS</title>
     <style>
     body {
       background-color: White;
