--- a/week-02-css/index.html
+++ b/week-02-css/index.html
@@ -19,9 +19,9 @@
  </style>
     <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
-  <body>
+  <body><div>
     <p "bold"><span>Space</span>: the final frontier.</p>
-    <p>
+    <p></div>
       These are the voyages of the starship <span class="big">Enterprise</span>.
      </p>
     <p>
