--- a/week-02-css/index.html
+++ b/week-02-css/index.html
@@ -20,14 +20,14 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body><div>
-    <p "bold"><span>Space</span>: the final frontier.</p>
-    <p></div>
+    <p id="first"><"bold"><span>Space</span>: the final frontier.</p>
+    <p id="second"></div>
       These are the voyages of the starship <span class="big">Enterprise</span>.
      </p>
-    <p>
+    <p id="third">
       I HATE CSS
     </p>
-    <p>To seek out <span class="big">new life</span>, and new civilizations.</p>
+    <p id="fourth">To seek out <span class="big">new life</span>, and new civilizations.</p>
     <p class= "dark"><span id="boldly">Be a Froot Loop</span> In a World of Cheerios</p>
   </body>
 </html>
