--- a/week-02-css/index.html
+++ b/week-02-css/index.html
@@ -3,19 +3,20 @@
   <head>
     <title>Cascading CSS</title>
     <style>
-    body {
-      background-color: White;
-    }
     p {
-      color:#4B0082;
-     border:thick solid purple;
-     text-align: right;
- }
- h1 {
-   color: #CD5C5C;
-        border: thin solid red;
-	      text-align: right;
- }
+  background-color: #F5FFFA;
+  color: black;
+  text-align: center;
+  font-size: 28px;
+}
+
+.highlighted {
+  border: thick dotted #00FA9A ;
+}
+
+#bottom {
+  background-color: #4d0066;
+}
  </style>
     <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
