--- a/week-02-css/index.html
+++ b/week-02-css/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Cascading CSS</title>
+    <title>Why I<span id="boldly"> HATE</span> CSS</title>
     <style>
     p {
   background-color: #F5FFFA;
@@ -21,14 +21,14 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body><div>
-    <p id="first"><"bold"><span>Space</span>: the final frontier.</p>
+    <p id="first"><"bold"><span>CSS</span>:is my<span id="boldly">worst</span>enemy.</p>
     <p id="second"></div>
-      These are the voyages of the starship <span class="big">Enterprise</span>.
+      This stuff took two <span class="big">weeks to finally comprehend</span>.
      </p>
     <p id="third">
       I HATE CSS
     </p>
-    <p id="fourth">To seek out <span class="big">new life</span>, and new civilizations.</p>
-    <p class= "dark"><span id="boldly">Be a Froot Loop</span> In a World of Cheerios</p>
+    <p id="fourth">This project <span class="big">was the</span>, Death of me.</p>
+    <p class= "dark"><span id="boldly">"I knew when I met you</span> an adventure was going to happen" </p>
   </body>
 </html>
