--- a/week-02-css/index.html
+++ b/week-02-css/index.html
@@ -4,14 +4,14 @@
     <title>Why I<span id="boldly"> HATE</span> CSS</title>
     <style>
     p1 {
-  background-color: #F5FFFA;
+  background-color: #a64dff;
   color: black;
   text-align: center;
   font-size: 28px;
 }
 
 .highlighted {
-  border: thick dotted #00FA9A ;
+  border: #00FA9A ;
 }
 
 #bottom {
@@ -20,9 +20,9 @@
  </style>
     <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
-  <body><div>
+  <body>
     <p id="first"><span id="bodly">CSS</span>:is my<span id="boldly"> WORST </span> enemy.</p>
-    <p id="second"></div>
+    <p id="second">
       This stuff took two <span class="big">weeks to finally comprehend</span>.
      </p>
     <p id="third">
