--- a/week-02-css/index.html
+++ b/week-02-css/index.html
@@ -3,26 +3,39 @@
   <head>
     <title>Why I<span id="boldly"> HATE</span> CSS</title>
     <style>
-    p1 {
+    p {
   background-color: #a64dff;
   color: black;
   text-align: center;
   font-size: 28px;
 }
-
-.highlighted {
-  border: #00FA9A ;
-}
-
-#bottom {
-  background-color: #4d0066;
+  #first {
+background-color:yellow;
+  color:blue;
+text-align: center
+font-size: 28px;
+ }
+ #second{
+   background-color:black;
+     color:#00FF00;
+     text-align: center;
+     font-size: 28px;
+   }
+#third {
+  background-color:#80ffff;
+    color:#ff6600;
+    text-align: center;
+    font-size: 28px;
+  }
+  #fourth {
+  border: #00FA9A;
 }
  </style>
     <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body>
-    <p id="first"><span id="bodly">CSS</span>:is my<span id="boldly"> WORST </span> enemy.</p>
-    <p id="second">
+  <p id="first"><span id="bodly">CSS</span>:is my<span id="boldly"> WORST </span> enemy.</p>
+  <p id="second">
       This stuff took two <span class="big">weeks to finally comprehend</span>.
      </p>
     <p id="third">
