--- a/week-02-css/index.html
+++ b/week-02-css/index.html
@@ -3,6 +3,9 @@
   <head>
     <title>Why I<span id="boldly"> HATE</span> CSS</title>
     <style>
+    title {
+      font-size:48px;
+    }
     p {
   background-color: #a64dff;
   color: black;
