--- a/week-02-css/index.html
+++ b/week-02-css/index.html
@@ -36,7 +36,7 @@ font-size: 28px;
     <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body>
-    <title>Why I<span id="boldly"> HATE</span> CSS</title>
+    <h1 Why I<span id="boldly"> HATE</span> CSS</h1>
   <p id="first"><span id="bodly">CSS</span>:is my<span id="boldly"> WORST </span> enemy.</p>
   <p id="second">
       This stuff took two <span class="big">weeks to finally comprehend</span>.
