--- a/week-02-css/index.html
+++ b/week-02-css/index.html
@@ -2,49 +2,47 @@
 <html>
   <head>
     <style>
-    h1 {
-      font-size:48px;
-    }
     p {
-  background-color: #a64dff;
-  color: black;
-  text-align: center;
-  font-size: 28px;
+  font-size: 48px;
 }
   #first {
-background-color:yellow;
+    background-color: #a64dff;
+    color: black;
+    text-align: center;
+    font-size: 28px;
+ }
+ #second{
+   background-color: yellow;
   color:blue;
 text-align: center
 font-size: 28px;
- }
- #second{
-   background-color:black;
-     color:#00FF00;
-     text-align: center;
-     font-size: 28px;
    }
 #third {
-  background-color:#80ffff;
-    color:#ff6600;
-    text-align: center;
-    font-size: 28px;
+  background-color:black;
+       color:#00FF00;
+       text-align: center;
+       font-size: 28px;
   }
   #fourth {
-  border: #00FA9A;
+    background-color:#80ffff;
+      color:#ff6600;
+      text-align: center;
+      font-size: 28px;
 }
+ #fifth {border: #00FA9A;}
  </style>
     <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body>
-    <h1 Why I<span id="boldly"> HATE</span> CSS</h1>
-  <p id="first"><span id="bodly">CSS</span>:is my<span id="boldly"> WORST </span> enemy.</p>
-  <p id="second">
+    <p id="first"> Why I<span id="boldly"> HATE</span> CSS</h1>
+  <p id="second"><span id="bodly">CSS</span>:is my<span id="boldly"> WORST </span> enemy.</p>
+  <p id="third">
       This stuff took two <span class="big">weeks to finally comprehend</span>.
      </p>
-    <p id="third">
+    <p id="fourth">
       I HATE CSS
     </p>
-    <p id="fourth">This project <span class="big">was the</span>, Death of me.</p>
+    <p id="fifth">This project <span class="big">was the</span>, Death of me.</p>
     <p class= "dark"><span id="boldly">"I knew when I met you</span> an adventure was going to happen" </p>
   </body>
 </html>
