--- a/week-02-css/index.html
+++ b/week-02-css/index.html
@@ -43,6 +43,6 @@ font-size: 28px;
       I HATE CSS
     </p>
     <p id="fifth">This project <span class="big">was the</span>, Death of me.</p>
-    <p class= "dark"><span id="boldly">"I knew when I met you</span> an adventure was going to happen" </p>
+    <p class="light highlighted"><span id="boldly">"I knew when I met you</span> an adventure was going to happen" </p>
   </body>
 </html>
