--- a/week-02-css/index.html
+++ b/week-02-css/index.html
@@ -30,6 +30,15 @@ font-size: 28px;
       font-size: 28px;
 }
  #fifth {border: #00FA9A;}
+ .light {
+        background-color: white;
+        color: black;
+        font-style: italic;
+      }
+
+      .highlighted {
+        border: thick dotted red;
+      }
  </style>
     <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
