--- a/week-04-dom-manipulation/index.html
+++ b/week-04-dom-manipulation/index.html
@@ -7,11 +7,15 @@
   </head>
   <body>
     <div id="inputs">
-      <div>Give me an adjective: <input id="adjective-one-input" /></div>
+      <p>Give an adjective: <input id="adjective-one-input" /></p>
       <button onclick="fillOutputs();">Done</button>
-    </div>
     <div id="output">
-      The <span id="adjective-one-output"></span> fox jumped over the lazy dog.
+    <p>  A vacation is when you take a trip to some <span id="adjective-one-output"></span> place with your family.
+      Usually you go to some place that is near a/an <span id="adjective-two-output"></span>
+      or up a/an <span id="adjective-three-output"></span>.
+      I like to spend my time <span id="adjective-four-output"></span> or <span id="adjective-five-output"></span>.
+      everyone needs a vacation because they work or are in school <span id="adjective-six-output"></span> hours everyday.
+    </p>
     </div>
   </body>
 </html>
